feat: 一个简单的蓝图仓库工具
