# docs/swagger.yaml
@@ -32,6 +32,53 @@ definitions:
       name:
         type: string
     type: object
+  blueprint.CreateProduct:
+    properties:
+      count:
+        type: integer
+      icon_path:
+        type: string
+      item_id:
+        type: integer
+      name:
+        type: string
+    type: object
+  blueprint.CreateRequest:
+    properties:
+      blueprint:
+        description: 蓝图代码
+        type: string
+      collections:
+        description: 蓝图集id
+        items:
+          $ref: '#/definitions/primitive.ObjectID'
+        type: array
+      description:
+        description: 蓝图描述
+        type: string
+      pic_list:
+        description: 蓝图图片
+        items:
+          type: string
+        type: array
+      products:
+        description: 蓝图产物
+        items:
+          $ref: '#/definitions/blueprint.CreateProduct'
+        type: array
+      tags:
+        items:
+          $ref: '#/definitions/blueprint.Tag'
+        type: array
+      title:
+        description: 蓝图标题
+        type: string
+    type: object
+  blueprint.CreateResponse:
+    properties:
+      id:
+        $ref: '#/definitions/primitive.ObjectID'
+    type: object
   blueprint.DetailResponse:
     type: object
   blueprint.GetRecipePanelResponse:
@@ -108,6 +155,15 @@ definitions:
       name:
         type: string
     type: object
+  blueprint.Tag:
+    properties:
+      icon_path:
+        type: string
+      item_id:
+        type: integer
+      name:
+        type: string
+    type: object
   collection.Collection:
     properties:
       description:
@@ -123,10 +179,10 @@ definitions:
         type: string
       id:
         $ref: '#/definitions/primitive.ObjectID'
+      parent_id:
+        $ref: '#/definitions/primitive.ObjectID'
       title:
         type: string
-    type: object
-  collection.DownloadResponse:
     type: object
   collection.GetCollectionBlueprintItem:
     properties:
@@ -208,6 +264,35 @@ paths:
           schema:
             $ref: '#/definitions/BadRequest'
       summary: 蓝图列表
+      tags:
+      - blueprint
+    post:
+      consumes:
+      - application/json
+      description: 创建蓝图
+      parameters:
+      - in: body
+        name: body
+        schema:
+          $ref: '#/definitions/blueprint.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              code:
+                type: integer
+              data:
+                $ref: '#/definitions/blueprint.CreateResponse'
+              msg:
+                type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/BadRequest'
+      summary: 创建蓝图
       tags:
       - blueprint
   /blueprint/{id}:
@@ -293,13 +378,14 @@ paths:
       summary: 获取配方面板
       tags:
       - blueprint
-  /collection/:id:
+  /collection/{id}:
     get:
       consumes:
       - application/json
       parameters:
-      - in: query
-        name: ID
+      - in: path
+        name: id
+        required: true
         type: string
       produces:
       - application/json
@@ -320,14 +406,15 @@ paths:
             $ref: '#/definitions/BadRequest'
       tags:
       - collection
-  /collection/:id/blueprint:
+  /collection/{id}/blueprint:
     get:
       consumes:
       - application/json
       description: 查询蓝图
       parameters:
-      - in: query
-        name: ID
+      - in: path
+        name: id
+        required: true
         type: string
       produces:
       - application/json
@@ -349,36 +436,7 @@ paths:
       summary: 查询蓝图
       tags:
       - collection
-  /collection/:id/download:
-    get:
-      consumes:
-      - application/json
-      description: 下载蓝图zip包
-      parameters:
-      - in: query
-        name: ID
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            properties:
-              code:
-                type: integer
-              data:
-                $ref: '#/definitions/collection.DownloadResponse'
-              msg:
-                type: string
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/BadRequest'
-      summary: 下载蓝图zip包
-      tags:
-      - collection
-  /collection/:id/notify:
+  /collection/{id}/notify:
     put:
       consumes:
       - application/json
@@ -408,14 +466,15 @@ paths:
       summary: 更新通知
       tags:
       - collection
-  /collection/:id/sub:
+  /collection/{id}/sub:
     get:
       consumes:
       - application/json
       description: 查询子蓝图集
       parameters:
-      - in: query
-        name: ID
+      - in: path
+        name: id
+        required: true
         type: string
       produces:
       - application/json
